--- a/HTML CSS/main.css
+++ b/HTML CSS/main.css
@@ -33,3 +33,37 @@ border-radius : 테두리 둥글게 */
   color: white;
   box-shadow: 6px 6px #faab50c3;
 }
+
+/* layout1.html */
+.container {
+  width: 800px;
+}
+
+.header {
+  width: 100%;
+  height: 100px;
+  background-color: #495c83;
+}
+
+.left-menu {
+  width: 20%;
+  height: 400px;
+  background-color: #7a86b6;
+  float: left;
+}
+
+.right-menu {
+  width: 80%;
+  height: 400px;
+  background-color: #a8a4ce;
+  float: left;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background-color: #c8b6e2;
+  clear: both;
+  /* clear: both; 
+  -> float다음에 오는 요소에게 주면 float로 발생하는 이상현상 해결가능 */
+}
