--- a/HTML CSS/main.css
+++ b/HTML CSS/main.css
@@ -49,6 +49,7 @@ border-radius : 테두리 둥글게 */
   width: 20%;
   height: 400px;
   background-color: #7a86b6;
+  display: inline-block;
   float: left;
 }
 
