--- a/HTML CSS/css/layout.css
+++ b/HTML CSS/css/layout.css
@@ -28,3 +28,22 @@
 .content {
   clear: both;
 }
+
+/* navbar */
+.navbar {
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.navbar li {
+  display: inline-block;
+  width: 50px;
+  text-align: center;
+}
+
+.navbar a {
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+}
