--- a/HTML CSS/css/layout.css
+++ b/HTML CSS/css/layout.css
@@ -1,3 +1,11 @@
+body {
+  margin: 0px;
+}
+
+div {
+  box-sizing: border-box;
+}
+
 /* layout 1 */
 .container {
   width: 800px;
@@ -50,6 +58,7 @@
 }
 
 /* layout 2 */
+
 .main-background {
   width: 100%;
   height: 500px;
@@ -93,13 +102,12 @@
 }
 
 .second-background {
-  width: 500px;
+  width: 50%;
+  max-width: 600px;
   height: 200px;
   background-color: #b2c8df;
-  position: absolute;
-  top: 430px;
-  right: 0px;
-  left: 0px;
+  position: relative;
+  top: -50px;
   margin: auto;
   padding: 20px;
   text-align: center;
