--- a/HTML CSS/css/layout.css
+++ b/HTML CSS/css/layout.css
@@ -112,3 +112,10 @@ div {
   padding: 20px;
   text-align: center;
 }
+
+input[type="text"] {
+  padding: 5px;
+  font-size: 16px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
