반응형레이아웃

--- a/HTML CSS/css/layout.css
+++ b/HTML CSS/css/layout.css
@@ -132,3 +132,9 @@ input[type="text"] {
 .nav-item {
   margin: 5px;
 }
+
+@media screen and (max-width: 1200px) {
+  .main-title {
+    font-size: 30px;
+  }
+}
