--- a/HTML CSS/css/layout.css
+++ b/HTML CSS/css/layout.css
@@ -139,6 +139,17 @@ input[type="text"] {
   text-align: center;
 }
 
+/* Font Awesome */
+.explain-container i {
+  background-color: rgb(179, 221, 179);
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  padding-top: 25px;
+  box-sizing: border-box;
+  color: white;
+}
+
 @media screen and (max-width: 992px) {
   .explain-container > div {
     float: left;
