--- a/JavaScript JQuery/main.css
+++ b/JavaScript JQuery/main.css
@@ -22,6 +22,15 @@
   opacity: 1;
 }
 
+.main-bg {
+  height: 300px;
+  background-color: azure;
+}
+
+.main-bg h4 {
+  padding-top: 140px;
+}
+
 /* 모달창 숙제 디자인 */
 .black-bg {
   width: 100%;
@@ -59,4 +68,27 @@
 
 .slide-box img {
   width: 100%;
+}
+
+/* 스크롤이벤트 */
+.navbar {
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+}
+
+.navbar-brand {
+  font-size: 25px;
+  transition: all 0.5s;
+}
+
+.progressA {
+  width: 100%;
+  height: 67px;
+  background-color: grey;
+  position: fixed;
+}
+
+.progressB {
+  background-color: black;
 }
