--- a/HTML CSS/css/layout.css
+++ b/HTML CSS/css/layout.css
@@ -163,3 +163,36 @@ input[type="text"] {
     width: 100%;
   }
 }
+
+/*  Transition 속성으로 CSS 애니메이션 구현하기 */
+.shop-bg {
+  background-color: #eee;
+  padding: 20px;
+}
+
+.shop-container {
+  display: flex;
+}
+
+.shop-item {
+  width: 33%;
+  padding: 10px;
+}
+
+.shop-item img {
+  width: 100%;
+  display: block;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: grey;
+  opacity: 0;
+  transition: all 0.4s;
+}
+
+.overlay:hover {
+  opacity: 0.7;
+}
