--- a/HTML CSS/css/layout.css
+++ b/HTML CSS/css/layout.css
@@ -183,16 +183,21 @@ input[type="text"] {
   width: 100%;
   display: block;
 }
-
-.overlay {
+.overlay-wrap {
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+.overlay {
+  width: 100%;
+  height: 50%;
   background-color: grey;
-  opacity: 0;
-  transition: all 0.4s;
+  opacity: 0.8;
+  margin-top: 100%;
+  transition: all 0.5s;
 }
 
-.overlay:hover {
-  opacity: 0.7;
+.overlay-wrap:hover .overlay {
+  margin-top: 50%;
 }
